--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+        <link rel="icon" type="image/png" href="images/favicon.png">
+
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/styles.css">
     </head>
@@ -29,14 +31,14 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #2f2a3a;">
             <div class="container">
-                <a class="navbar-brand" href="#">Portfolio</a>
+                <a class="navbar-brand" href="#" style="font-size: 90px;">Portfolio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#summarizing-statement">Summarizing Statement</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#summarizing-statement">About Me</a></li>
                         <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
                         <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
@@ -46,13 +48,29 @@
                 </div>
             </div>
         </nav>
-        <!-- Summarizing Statement Section -->
+        <!-- About Me Section -->
         <section id="summarizing-statement" class="section-padding">
             <div class="container">
-                <h2>Summarizing Statement</h2>
-                <p>UPDATE</p>
+                <h2>About Me</h2>
+                <div id="about-me-container" class="d-flex justify-content-between align-items-center">
+                    <div id="about-me-text" style="flex: 1; padding-right: 20px;">
+                        <p>
+                            My Name is Nathan Sikkema, and I am 19 years old. I am currently a student at Mohawk College, in 4th semester.
+                            I have been programming for over 5 years now, and have enjoyed every language I've dived into! I am currently
+                            focused on learning more about Python and JavaScript, and am excited to see what else I can learn! 
+                        </p>
+                        <p>
+                            Some of my hobbies include programming, playing multiplayer games with friends. I really enjoy strategy board games,
+                            and sometimes get outside and do some parkour!
+                        </p>
+                    </div>
+                    <div id="about-me-image" style="flex: 1;">
+                        <img src="images/Hobbies.png" alt="Hobbies" class="img-fluid" style="width: 100%; height: auto;">
+                    </div>
+                </div>
             </div>
         </section>
+        
 
         <!-- Education Section -->
         <section id="education" class="section-padding">
@@ -86,19 +104,53 @@
 
         <!-- Resume Section -->
         <section id="resume" class="section-padding">
-            <div class="container">
+            <div class="container text-center">
                 <h2>Resume</h2>
-                <a href="resume.pdf" class="btn btn-danger" download>Download My Resume</a>
+                <!-- Inline SVG display -->
+                <div class="resume-container">
+                    <object data="2025-Resume.svg" type="image/svg+xml" class="resume-svg">
+                        Your browser does not support SVGs. <a href="2025 - Resume.pdf">Download PDF</a>
+                    </object>
+                </div>
+                <!-- Download button -->
+                <a href="2025 - Resume.pdf" class="btn btn-danger mt-3" download>Download My Resume</a>
             </div>
         </section>
 
+
         <!-- Contact Section -->
         <section id="contact" class="section-padding">
-            <div class="container">
+            <div class="container text-center">
                 <h2>Contact</h2>
-                <p>Feel free to reach out to me at: <a href="mailto:nathan.sikkema@mohawkcollege.ca">nathan.sikkema@mohawkcollege.ca</a></p>
+                <p>
+                    Feel free to reach out to through any of the following platforms!
+                </p>
+                <div class="social-links mt-3">
+                    <a href="mailto:nathan.sikkema@mohawkcollege.ca" class="me-2">
+                        <i class="bi bi-envelope-fill"></i>
+                        <span>E-mail</span>
+                    </a>
+                    <a href="https://github.com/NathanSikkema" target="_blank" class="me-3">
+                        <i class="bi bi-github"></i>
+                        <span>GitHub</span>
+                    </a>
+                    <a href="https://www.linkedin.com/in/nathan-sikkema-219b02298/" target="_blank" class="me-3">
+                        <i class="bi bi-linkedin"></i>
+                        <span>LinkedIn</span>
+                    </a>
+                    <a href="https://www.instagram.com/nathan_sikkema/" target="_blank" class="me-3">
+                        <i class="bi bi-instagram"></i>
+                        <span>Instagram</span>
+                    </a>
+                    <a href="https://discord.gg/yourserver" target="_blank">
+                        <i class="bi bi-discord"></i>
+                        <span>Discord</span>
+                    </a>
+                </div>
             </div>
         </section>
+
+
 
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
