Added content to Education and Skills

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             </div>
         </nav>
         <!-- About Me Section -->
-        <section id="summarizing-statement" class="section-padding">
+        <section id="summarizing-statement" class="section-padding about-me-parent">
             <div class="container">
                 <h2>About Me</h2>
                 <div id="about-me-container" class="d-flex justify-content-between align-items-center">
-                    <div id="about-me-text" style="flex: 1; padding-right: 20px;">
+                    <div id="about-me-text" >
                         <p>
                             My Name is Nathan Sikkema, and I am 19 years old. I am currently a student at Mohawk College, in 4th semester.
                             I have been programming for over 5 years now, and have enjoyed every language I've dived into! I am currently
@@ -63,34 +63,20 @@
                             Some of my hobbies include programming, playing multiplayer games with friends. I really enjoy strategy board games,
                             and sometimes get outside and do some parkour!
                         </p>
+                        <p>
+                            For the last 5 summers, I have been working in construction. This year, I started my own business as a general contractor.
+                            My previous experience has been framing houses for 3 years, and building decks and bunkies for the other 2. If you would like 
+                            to check out the website I built for my business, you can find it here: 
+                                <a href="https://bunkiebuilder.com" target="_blank" style="text-decoration: underline;">Bunkiebuilder.com</a>
+                        </p>
                     </div>
                     <div id="about-me-image" style="flex: 1;">
-                        <img src="images/Hobbies.png" alt="Hobbies" class="img-fluid" style="width: 100%; height: auto;">
+                        <img src="images/Hobbies.png" alt="Hobbies" class="img-fluid" >
                     </div>
                 </div>
             </div>
         </section>
         
-
-        <!-- Education Section -->
-        <section id="education" class="section-padding">
-            <div class="container">
-                <h2>Education</h2>
-                <ul>
-                    <li>Mohawk College</li>
-                    <li>Rehoboth Christian School</li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- Skills Section -->
-        <section id="skills" class="section-padding">
-            <div class="container">
-                <h2>Skills</h2>
-                <p>Java, Python, JavaScript</p>
-            </div>
-        </section>
-
         <!-- Projects Section -->
         <section id="projects" class="section-padding">
             <div class="container">
@@ -101,6 +87,54 @@
             </div>
         </section>
 
+        <!-- Education and Skills Section -->
+        <section id="education-skills-container" class="section-padding">
+            <div class="container d-flex">
+                <!-- Education Section -->
+                <div class="education-container">
+                    <h2>Education</h2>
+                    <ul>
+                        <li>Mohawk College</li>
+                        <ul>
+                            <li>4 Semesters</li>
+                            <li>Programming Fundamentals</li>
+                            <li>Programming in Java</li>
+                            <li>Introduction to Artificial Intelligence</li>
+                        </ul>
+                        <li style="margin-top: 15px;">Rehoboth Christian School</li>
+                        <ul>
+                            <li>Kindergarden - Grade 12</li>
+                            <li>Computer Science 3U</li>
+                        </ul>
+                    </ul>
+                </div>
+
+                <!-- Skills Section -->
+                <div class="skills-container">
+                    <h2 class="sub-title">Software Skills</h2>
+                    <h3>Programming Languages</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Java</li>
+                        <li>C#</li>
+                    </ul>
+                    <h3>Web Development Languages</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>PHP</li>
+                    </ul>
+                    <h3>Other Skills</h3>
+                    <ul>
+                        <li>SQL</li>
+                        <li>Linix/Unix</li>
+                        <li>.NET</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
         <!-- Resume Section -->
         <section id="resume" class="section-padding">
