Updated Nav Links

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section id="education-skills-container" class="section-padding">
             <div class="container d-flex">
                 <!-- Education Section -->
-                <div class="education-container">
+                <div id="education" class="education-container">
                     <h2>Education</h2>
                     <ul>
                         <li>Mohawk College</li>
@@ -110,7 +110,7 @@
                 </div>
 
                 <!-- Skills Section -->
-                <div class="skills-container">
+                <div id="skills" class="skills-container">
                     <h2 class="sub-title">Software Skills</h2>
                     <h3>Programming Languages</h3>
                     <ul>
