--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #2f2a3a;">
             <div class="container">
-                <a class="navbar-brand" href="#" style="font-size: 90px;">Portfolio</a>
+                <a class="navbar-brand" href="#" >Portfolio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#summarizing-statement">About Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about-me">About Me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#education-skills-container">Education & Skills</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -49,9 +49,9 @@
             </div>
         </nav>
         <!-- About Me Section -->
-        <section id="summarizing-statement" class="section-padding about-me-parent">
+        <section id="about-me" class="section-padding about-me-parent">
             <div class="container">
-                <h2>About Me</h2>
+                <h1>About Me</h1>
                 <div id="about-me-container" class="d-flex justify-content-between align-items-center">
                     <div id="about-me-text" >
                         <p>
@@ -93,19 +93,17 @@
                 <!-- Education Section -->
                 <div id="education" class="education-container">
                     <h2>Education</h2>
+                    <h3>Mohawk College</h3>
                     <ul>
-                        <li>Mohawk College</li>
-                        <ul>
-                            <li>4 Semesters</li>
-                            <li>Programming Fundamentals</li>
-                            <li>Programming in Java</li>
-                            <li>Introduction to Artificial Intelligence</li>
-                        </ul>
-                        <li style="margin-top: 15px;">Rehoboth Christian School</li>
-                        <ul>
-                            <li>Kindergarden - Grade 12</li>
-                            <li>Computer Science 3U</li>
-                        </ul>
+                        <li>3 Semesters Completed</li>
+                        <li>Programming Fundamentals</li>
+                        <li>Programming in Java</li>
+                        <li>Introduction to Artificial Intelligence</li>
+                    </ul>
+                    <h3 style="margin-top: 15px;">Rehoboth Christian School</h3>
+                    <ul>
+                        <li>Kindergarden - Grade 12</li>
+                        <li>Computer Science 3U</li>
                     </ul>
                 </div>
 
@@ -139,7 +137,7 @@
         <!-- Resume Section -->
         <section id="resume" class="section-padding">
             <div class="container text-center">
-                <h2>Resume</h2>
+                <h1>Resume</h1>
                 <!-- Inline SVG display -->
                 <div class="resume-container">
                     <object data="2025-Resume.svg" type="image/svg+xml" class="resume-svg">
@@ -175,10 +173,6 @@
                     <a href="https://www.instagram.com/nathan_sikkema/" target="_blank" class="me-3">
                         <i class="bi bi-instagram"></i>
                         <span>Instagram</span>
-                    </a>
-                    <a href="https://discord.gg/yourserver" target="_blank">
-                        <i class="bi bi-discord"></i>
-                        <span>Discord</span>
                     </a>
                 </div>
             </div>
