--- a/projectPage.html
+++ b/projectPage.html
@@ -19,7 +19,7 @@
                 <h4>Language:</h4>
                 <p id="primary-language"></p>
             </div>
-            <div class="col-md-6">
+            <div id="secondary-language-container" class="col-md-6">
                 <h4>Secondary Language:</h4>
                 <p id="secondary-language"></p>
             </div>
