Added Statement of Authorship

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
             Course............ : Software Development Tools
             Type.............. : HTML
             Start Date........ : 2025 Feb 28
-            End Date.......... : 
-            Duration.......... : 
-            Last Modified..... : 
-            Validation Date... : 
+            End Date.......... : 2025 Feb 29
+            Duration.......... : 2 Days
+            Last Modified..... : 2025 Feb 29
+            
+            I, Nathan Sikkema 000911571, certify that this work is my own work and that I did not consult external
+            resources without due acknowledgement.
+
+            I further certify that I did not provide my solution to any other students, nor will I provide it to future
+            students taking this course at a later date.
         -->
             
         <title>
